--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
     <head>
         <title>Ralph J McIntyre | Web Design | Web Development | Mechanicsburg, PA</title>
+        <link href="css/home.css" rel="stylesheet" type="text/css">
+        <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <h1>Coming Soon</h1>
+        <section id="main">
+            <div id="content">
+                <h1>Ralph J McIntyre</h1>
+                <p id="description"><span id="design">Web Design</span> | <span id="development">Web Development</span> | <span id="location">Mechanicsburg, PA</span></p>
+            </div>
+        </section>
     </body>
 </html>
